feat: Configuraciones globales e implementaciones multi-empresa